@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  16 Jan 2007; Roy Marples <uberlord@gentoo.org>:
+
+    Stop hotplug events from spamming log files.
+
   15 Jan 2007; Roy Marples <uberlord@gentoo.org>:
 
     Fix ifplugd stopping.
